--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
     --accent-color: #2196F3;
     --primary-background-color: #FFFFFF;
     --secondary-background-color: #F5F4FA;
+    --footer-background-color: #2F303A;
     --transition-dur-and-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -283,19 +284,19 @@ img {
 }
 
 .icon-antenna::before {
-    background-image: url("../images/icon/about/antenna.svg");
+    background-image: url("../images/icon/full/antenna.svg");
 }
 
 .icon-clock::before {
-    background-image: url("../images/icon/about/clock.svg");
+    background-image: url("../images/icon/full/clock.svg");
 }
 
 .icon-diagram::before {
-    background-image: url("../images/icon/about/diagram.svg");
+    background-image: url("../images/icon/full/diagram.svg");
 }
 
 .icon-astronaut::before {
-    background-image: url("../images/icon/about/astronaut.svg");
+    background-image: url("../images/icon/full/astronaut.svg");
 }
 
 .about-list .item:nth-child(4n) {
@@ -487,7 +488,7 @@ img {
 /* footer */
 
 .footer {
-    background-color: #2F303A;
+    background-color: var(--footer-background-color);
     padding-top: 60px;
     padding-bottom: 60px;
 }
@@ -526,8 +527,11 @@ img {
 
 .footer-contacts-social {
     display: flex;
-    column-gap: 70px;
     align-items: baseline;
+}
+
+.footer-logo-contacts {
+    margin-right: 70px;
 }
 
 .social-footer-text {
@@ -566,6 +570,91 @@ img {
     width: 20px;
     height: 20px;
     fill: var(--white-text-color);
+}
+
+/* footer-form */
+
+.footer-form {
+    margin-left: auto;
+}
+
+.footer-form-title {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color: var(--white-text-color);
+}
+
+.footer-form-subscribe {
+    display: flex;
+}
+
+.footer-form-input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding-left: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: var(--white-text-color);
+    background-color: var(--footer-background-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    transition: border-color var(--transition-dur-and-func);
+}
+
+.footer-form-input::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;    
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.footer-form-submit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    /* height: 50px; */
+    color: var(--white-text-color);
+    background-color: var(--accent-color);
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;    
+    letter-spacing: 0.06em;
+    text-align: center;
+
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 1px solid transparent;
+
+    transition: background-color var(--transition-dur-and-func);
+}
+
+.footer-form-submit:hover,
+.footer-form-submit:focus {
+    background-color: #188CE8;
+}
+
+.footer-form-submit-icon {
+    display: block;
+    fill: var(--white-text-color);
+    margin-left: 10px;
 }
 
 /* backdrop */
@@ -692,6 +781,7 @@ img {
 }
 
 .modal-form-message {
+    display: block;
     width: 100%;
     height: 120px;
     padding: 12px 16px;
@@ -716,16 +806,20 @@ img {
 .modal-form-checkbox {
     display: flex;
     align-items: center;
+    justify-content: center;
     margin-bottom: 30px;
 }
 
 .modal-form-own-check {
-    width: 16px;
-    height: 15px;
-    border: 1px solid var(--primary-text-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--primary-text-color);
     border-radius: 2px;
+    fill: var(--white-text-color);
     cursor: pointer;
     margin-right: 7px;
+    transition: background-color var(--transition-dur-and-func);
 }
 
 .modal-form-check-icon {
@@ -735,16 +829,15 @@ img {
 
 .modal-form-check:checked + .modal-form-own-check {
     background-color: var(--accent-color);
-    border-color: var(--accent-color);
+    border: none;
 }
 
 .modal-form-check:checked + .modal-form-own-check .modal-form-check-icon {
-    display: block;
+    display: block;  
 }
 
 .modal-form-checkbox-policy {
     font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
     color: #757575;
 }
